<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.SearchResultActivity">
    <item
        android:id="@+id/add_name"
        android:title="@string/add_name"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_names"
        android:title="@string/search_name_button"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/title_screen3"
        android:orderInCategory="300"
        android:title="@string/title_screen3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
