<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nomprenom2.MainActivity">

    <item
        android:id="@+id/menu_favorites"
        android:orderInCategory="100"
        android:title="@string/menu_favorites"
        app:showAsAction="never"
        />
    <!--todo: what the heck is android:orderInCategory -->

    <item
        android:id="@+id/menu_my_names"
        android:orderInCategory="200"
        android:title="@string/menu_my_names"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_choose_name"
        android:orderInCategory="300"
        android:title="@string/menu_choose_name"
        app:showAsAction="never"
        />
</menu>
