<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dip">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/zodiac_hdr"
        android:layout_alignBottom="@+id/zodiac_hdr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/patronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patronymic"
        android:layout_alignBottom="@+id/compl_hdr"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zodiac_hdr"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/zodiac"
        android:layout_alignTop="@+id/checkBox1_hdr"
        android:layout_toLeftOf="@+id/compl_hdr"
        android:layout_toStartOf="@+id/compl_hdr"
        android:layout_margin="6dp" />

    <TextView
        android:id="@+id/compl_hdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compl"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignTop="@+id/checkBox1_hdr"
        android:layout_toLeftOf="@+id/checkBox1_hdr"
        android:layout_toStartOf="@+id/checkBox1_hdr"
        android:layout_margin="6dp" />

    <TextView
        android:text="@string/nookmarked"
        android:id="@+id/checkBox1_hdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp" />





</RelativeLayout>